Fix spacing issues

--- a/style/base.css
+++ b/style/base.css
@@ -393,6 +393,7 @@ textarea,
 .template-margin-top-6															{	margin-top:60px !important;		}
 
 .template-padding-bottom-5														{	padding-bottom:50px !important;	}
+.template-padding-bottom-reset												{	padding-bottom:0 !important;	}
 
 /******************************************************************************/
 /* Color																	  */
